Changed to "Clique"

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <div class="gift-section">
             <h2 class="gift-title">Veja como estou feliz nesta data especial 🥳</h2>
-            <h3 class="gift-hint">(Passe o mouse no seu presente)</h3>
+            <h3 class="gift-hint">(Clique no seu presente)</h3>
             <div class="gift-img" id="gift-img-first"></div>
         </div>
         
